Update StackEngine.java